added some images, added a few slides

--- a/index.html
+++ b/index.html
@@ -43,10 +43,73 @@
 		<br/>
 	</div>
 	<div>
-		The contents of the the slides have been stol..., umm, <br/>
-		<i>liberally borrowed</i> from <a href="http://www.slideshare.net/dotCloud">Docker Slideshare</a> materials.<br/>
-		Thanks to everyone at Docker, Inc!
+		This is a fork of a presentaion originally created by John Lewis (<a href="http://www.github.com/pointful">pointful</a>)<br/>
+
+		The contents of the the slides have been <i>liberally borrowed</i><br/>
+		from <a href="http://www.slideshare.net/dotCloud">Docker Slideshare</a> materials.<br/>
+		Thanks to everyone at Docker, Inc!<br/>
 	</div>
+</section>
+
+<section>
+	<img src="docker-img/dockerdockerdocker.bmp">
+</section>
+
+<section>
+	<h2>What is Docker?</h2>
+	<h4>
+		<p class="fragment" data-fragment-index="0">
+			<b>An open platform for developers and sysadmins to <br>
+				build, ship, and run distributed applications</b><br/><br/>
+		</p>
+	</h4>
+	<div style="position: absolute; left: 1%; width: 48%;" class="absolute-element">
+		<p class="fragment" data-fragment-index="1"><b>Docker Engine</b></p>
+		<ul style="font-size: 24px;" class="fragment" data-fragment-index="2">
+			<li>A portable, lightweight application <br>
+				runtime and packaging tool. </li>
+		</ul>
+	</div>
+	<div style="position: absolute; left: 52%; width: 48%;" class="absolute-element">
+		<p class="fragment" data-fragment-index="1"><b>Docker Hub</b></p>
+		<ul style="font-size: 24px;" class="fragment" data-fragment-index="2">
+			<li>A cloud service for sharing applications </br>
+				and automating workflows.</li>
+		</ul>			
+	</div>
+	<br><br><br><br>
+	<div>
+		<p class="fragment" data-fragment-index="3"><img src="docker-img/build-ship-run.png" /><br/></p>
+	</div>
+</section>
+
+<section>
+	<h2>Docker Inc.</h2>
+	<div style="position: absolute; left: 1%; width: 48%;" class="absolute-element">
+		<p class="fragment" data-fragment-index="1"><b>About Docker Inc.</b></p>
+		<ul>
+			<ul style="font-size: 24px;">
+				<li class="fragment" data-fragment-index="2">Company behind the Docker ecosystem</li>
+				<li class="fragment" data-fragment-index="3">Launched in March 2013</li>
+				<li class="fragment" data-fragment-index="4">HQ in San Francisco</li>
+				<li class="fragment" data-fragment-index="5">Originally dotCloud</li>
+			</ul>
+			<br>
+			<p class="fragment" align="center" data-fragment-index="6"><b>By the numbers.</b></p>
+			<ul style="font-size: 24px;">
+				<li class="fragment" data-fragment-index="7">20,000+ GitHub stars</li>
+				<li class="fragment" data-fragment-index="8">200M+ Docker Engine downloads</li>
+				<li class="fragment" data-fragment-index="9">100,000+ "Dockerized" applications in the Docker Hub Registry</li>
+				<li class="fragment" data-fragment-index="10">170+ Docker Meetup Groups in 50 countries</li>
+				<li class="fragment" data-fragment-index="11">900+ community contributors</li>
+				<li class="fragment" data-fragment-index="12">75,000 third-party projects on GitHub using Docker</li>
+
+			</ul>
+		</ul>
+	</div>
+	<div style="position: absolute; left: 52%; width: 48%;" class="absolute-element">
+		<img src="docker-img/containership_gg.jpg">
+	</div>	
 </section>
 		
 <section>
