updated cover page, added worked in dev

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <section>
 	<h1>Intro to Docker</h1>
 	<div>
-		<img src="docker-img/docker.png" style="width: 432px; height: 376px; max-height: none; max-width: none;"/>
+		<img src="docker-img/docker-square.jpg" style="width: 425px; height: 376px; max-height: none; max-width: none;"/>
 		<br/>
 	</div>
 	<div>
@@ -111,28 +111,6 @@
 		<img src="docker-img/containership_gg.jpg">
 	</div>	
 </section>
-		
-<section>
-	<h2>Since it started in March 2013...</h2>
-	<ul>
-		<li class="fragment" data-fragment-index="0">&gt;200,000 pulls</li>
-		<li class="fragment" data-fragment-index="2">&gt;7,500 github stars</li>
-		<li class="fragment" data-fragment-index="3">&gt;200 significant contributors</li>
-		<li class="fragment" data-fragment-index="4">&gt;200 projects built on top of docker</li>
-		<ul>
-			<li class="fragment" data-fragment-index="4">UIs, mini-PaaS, Remote Desktop...</li>
-		</ul>
-		<li class="fragment" data-fragment-index="5">1000’s of Dockerized applications</li>
-		<ul>
-			<li class="fragment" data-fragment-index="5">Memcached, Redis, Node.js, Hadoop...</li>
-		</ul>
-		<li class="fragment" data-fragment-index="6">Integration in Jenkins, Travis, Chef, Puppet, Vagrant and OpenStack</li>
-		<li class="fragment" data-fragment-index="7">Meetups arranged around the world…</li>
-		<ul>
-			<li class="fragment" data-fragment-index="7">with organizations like Ebay, Cloudflare, Yandex, and Rackspace presenting on their use of Docker</li>
-		</ul>
-	</ul>
-</section>
 
 <section>
 	<h2>The Challenge</h2>
@@ -181,6 +159,10 @@
 	<p>
 		<img src="docker-img/eliminates-matrix-from-hell.png">
 	</p>
+</section>
+
+<section>
+	<img src="docker-img/worked-fine-in-dev.jpg">
 </section>
 
 <section>
